feat: add css styles

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="game-name">
         <h1>Game snake v 0.1</h1>
         <div class="game-link">
-            <form action="https://mill9r.github.io/snake/game.html">
-            <!--<form action="game.html">-->
+            <!--<form action="https://mill9r.github.io/snake/game.html">-->
+            <form action="game.html">
                 <input type="submit" value="Start game"/>
             </form>
         </div>
