ref: move html code in JS code

--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
 </head>
 <body>
 <div class="game">
-    <div class="game-name">
-        <h1>Game snake v 0.1</h1>
-        <div class="game-link">
-            <!--<form action="https://mill9r.github.io/snake/game.html">-->
-            <form action="game.html">
-                <input type="submit" value="Start game"/>
-            </form>
-        </div>
-    </div>
+
 </div>
 </body>
+<script src="gameEngine.js"></script>
 </html>
