feat: add Mediator pattern to the view

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Snake start</title>
+    <title>Snake game</title>
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div class="game">
-
+<div id="init-state">
 </div>
 </body>
 <script src="gameEngine.js"></script>
